--- a/final_asignment.ipynb
+++ b/final_asignment.ipynb
@@ -1304,7 +1304,6 @@
     "\n",
     "# Add the Bokeh plot to the Panel app\n",
     "# Set up layouts and add to document\n",
-    "\n",
     "description = \"\"\"This is a web app designed for people who want to gain insight into relative food prices.\n",
     "For each category of food, the most significantly nutricious products are extracted and plotted aginst the unit price.\n",
     "The unitprice is a normalised price for the €cent/kg or liter or piece. The cut-off of which can be set using the\n",
@@ -1314,6 +1313,14 @@
     "pn.Column('# Supermarket food retrieval',\n",
     "          description,\n",
     "          column(p, cut_off)).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "An attempt was made to cut through the aggressive and confusing marketing tactics of supermarkets using a data-based approach. Shortcomings are found within the fact, some groups do not really have any outlyers within the sample group. The scoring formula in this case just favours the more fatty/sugary/energy rich food. Furthermore, the search functionality of the jumbo_api tends to retrieve fully unrelated items, resulting in somewhat messy results. However, this lays beyond the scope of the project. Dispite some technical shortcomings, the food_informer project allows for a clear and non-biased interpretation of cheap and nutricous food."
    ]
   }
  ],
